# macro-recorder-plus

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_macro_recorder_plus.py
.github/workflows/: ci.yml
docs/: json-schema.md  manual-windows-test-checklist.md
examples/: example_login_macro.mrplus.json
macro_recorder_plus/: __init__.py  app.py  application.py  keymap.py  model.py  player.py  recorder.py  storage.py
macro_recorder_plus/exporters/: __init__.py  pyinstaller_exporter.py  python_exporter.py
macro_recorder_plus/models/: __init__.py  actions.py  environment.py  macro.py
macro_recorder_plus/platform/: __init__.py  windows_dpi.py  windows_hotkeys.py  windows_input.py  windows_monitors.py
macro_recorder_plus/playback/: __init__.py  playback_engine.py  playback_worker.py  safety_controller.py
macro_recorder_plus/recorder/: __init__.py  event_normalizer.py  input_recorder.py
macro_recorder_plus/storage/: __init__.py  json_store.py
packaging/: macro-recorder-plus.spec
tests/: test_action_properties.py  test_action_table_model.py  test_conditional_actions.py  test_event_normalizer.py  test_held_input_tracker.py  test_hotkeys.py  test_image_recognition.py  test_input_recorder.py  test_json_storage.py  test_key_sequences.py  test_main_window_controls.py  test_model_storage.py  test_monitor_transform.py  test_mouse_path.py  test_open_file_action.py  test_playback_mouse_timing.py  test_pyinstaller_exporter.py  test_python_exporter.py  test_settings_dialog.py  test_theme.py  test_undo_commands.py
(+19 files in other folders)
