[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-recorder-plus"
version = "0.1.0"
description = "A desktop keyboard and mouse macro recorder."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7",
    "pynput>=1.7.7",
    "Pillow>=10",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.4",
    "PyInstaller>=6",
]
packaging = [
    "PyInstaller>=6",
]

[project.scripts]
macro-recorder-plus = "macro_recorder_plus.app:main"

[tool.setuptools.packages.find]
include = ["macro_recorder_plus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
